--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,8 @@
   "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && nodemon ./dist/app"
+    "start": "tsc && nodemon ./dist/app",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
