--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 after_success:
   - rm -rf /tmp/SimpleFlashCard
   - git clone  https://github.com/andreferreiratrindade/SimpleFlashCardBackEndDeploy.git  /tmp/SimpleFlashCard/
-  - cp -r dist/* /tmp/SimpleFlashCard/
+  - cp -r BackEnd/dist/* /tmp/SimpleFlashCard/
   - cd /tmp/SimpleFlashCard/
   - git config user.email "andreferreiratrindade@gmail.com"
   - git config user.name "André"
