--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: Run a BACKEND
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      cd BackEnd
+      npm install
+      npm run-script build
+      echo "skipping tests"
