Adicionando build quasar

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,16 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run a BACKEND
+    - name: Run BackEnd - NodeJs
       run: |
         cd BackEnd
         npm install
         npm run-script build
         echo "skipping tests"
+    - name: Run FrontEnd - Quasar 
+      run:  |
+        cd FrontEnd
+        npm install -g @quasar/cli
+        npm install
+        echo "skipping tests"
+        quasar build 
