--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,6 @@ jobs:
     - name: Run BackEnd / FrontEnd- NodeJs - Quasar
       run: |
         cd FrontEnd
-        npm install -g @quasar/cli
+        sudo npm install -g @quasar/cli
         npm install
         quasar build 
