--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && nodemon ./dist/app",
-    "build": "tsc"
+    "build": "tsc",
+    "tsc": "tsc",
+    "postinstall": "npm run tsc"
   },
   "author": "",
   "license": "ISC",
