--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,7 @@
   "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/app",
+    "start": "tsc && node ./dist/app",
     "build": "tsc",
     "tsc": "tsc",
     "heroku-prebuild": "npm install -g typescript && npm install"
