--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         cd FrontEnd
         sudo npm install -g @quasar/cli
         npm install
-        quasar build 
+        quasar build
     - name: Run BackEnd - NodeJs
       run:  |
         cd BackEnd
@@ -23,6 +23,6 @@ jobs:
     - name: Add remote origin
       run: |
         git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-    - name: Deploy to Heroku
+    - name: Deploy BackEnd to Heroku
       run: |
         git subtree push --prefix BackEnd heroku main
