--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
         sudo npm install -g @quasar/cli
         npm install
         quasar build
-        git clone  https://github.com/andreferreiratrindade/SimpleFlashCardBackEndDeploy.git  /tmp/SimpleFlashCard/
-        cp -r dist/spa tmp/SimpleFlashCard
+        sudo git clone  https://github.com/andreferreiratrindade/SimpleFlashCardBackEndDeploy.git  /tmp/SimpleFlashCard/
+        sudo cp -r dist/spa tmp/SimpleFlashCard
         cd /tmp/SimpleFlashCard/
         git config user.email "andreferreiratrindade@gmail.com"
         git config user.name "André"
