--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
         sudo npm install -g @quasar/cli
         npm install
         quasar build
+        sudo chmod -R 755 /home/Workspace/Release/addons/
         sudo git clone  https://github.com/andreferreiratrindade/SimpleFlashCardBackEndDeploy.git  /tmp/SimpleFlashCard/
         sudo cp -r dist/spa tmp/SimpleFlashCard
         cd /tmp/SimpleFlashCard/
