--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
         npm install
         quasar build
         sudo chmod -R 755 /home/Workspace/Release/addons/
-        sudo git clone  https://github.com/andreferreiratrindade/SimpleFlashCardBackEndDeploy.git  /tmp/SimpleFlashCard/
-        sudo cp -r dist/spa tmp/SimpleFlashCard
-        cd /tmp/SimpleFlashCard/
+        sudo git clone  https://github.com/andreferreiratrindade/SimpleFlashCardBackEndDeploy.git  
+        sudo cp -r dist/spa SimpleFlashCardBackEndDeploy
+        cd SimpleFlashCardBackEndDeploy
         git config user.email "andreferreiratrindade@gmail.com"
         git config user.name "André"
         git add --all
