--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         sudo npm install -g @quasar/cli
         npm install
         quasar build
-        sudo chmod ug+rw *.*
+        sudo chmod -R 755 /home/runner/work/SimpleFlashCard/SimpleFlashCard/FrontEnd/dist/spa
         sudo git clone  https://github.com/andreferreiratrindade/SimpleFlashCardBackEndDeploy.git  /tmp/SimpleFlashCardBackEndDeploy
         sudo cp -r dist/spa tmp/SimpleFlashCardBackEndDeploy
         cd tmp/SimpleFlashCardBackEndDeploy
