--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: CI
 
-on: [push]
-
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
   build:
 
@@ -41,3 +44,27 @@ jobs:
     - name: Deploy BackEnd to Heroku
       run: |
         git subtree push --prefix BackEnd heroku main
+
+
+on:
+  push:
+    branches-ignore: [ main ]
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v1
+    - name: Run FrontEnd  - Quasar
+      run: |
+        cd FrontEnd
+        sudo npm install -g @quasar/cli
+        npm install
+        quasar build
+
+    - name: Run BackEnd - NodeJs
+      run:  |
+        cd BackEnd
+        npm install
+        npm run-script build 
