--- a/.github/workflows/main_ci_cd.yml
+++ b/.github/workflows/main_ci_cd.yml
@@ -28,6 +28,7 @@ jobs:
         git config user.name "André"
         git fetch
         git pull
+        git clean -f
         git add --all
         git commit -a -m "deploy"
         git checkout master
