--- a/.github/workflows/other_branches_ci_cd.yml
+++ b/.github/workflows/other_branches_ci_cd.yml
@@ -7,7 +7,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+    environment:  
+      name: dev
     steps:
     - uses: actions/checkout@v1
     - name: Run FrontEnd  - Quasar
